Update ThemeGui to match other Guis

--- a/MainModule.ModuleScript/ThemeGui.ScreenGui/ThemeFrame.Frame/Main.ScrollingFrame/UIListLayout.UIListLayout.properties
+++ b/MainModule.ModuleScript/ThemeGui.ScreenGui/ThemeFrame.Frame/Main.ScrollingFrame/UIListLayout.UIListLayout.properties
@@ -1,1 +1,1 @@
-{{SortOrder="Enum.SortOrder.LayoutOrder",Tags={"I2F_949D96BF-C8F2-405E-A31A-1DB4E8267FDC"}}}
+{{Padding="UDim.new(0, 5)",SortOrder="Enum.SortOrder.LayoutOrder",Tags={"I2F_949D96BF-C8F2-405E-A31A-1DB4E8267FDC"}}}
