--- a/MainModule.ModuleScript/ThemeGui.ScreenGui/ThemeFrame.Frame/Main.ScrollingFrame/UIListLayout.UIListLayout.properties
+++ b/MainModule.ModuleScript/ThemeGui.ScreenGui/ThemeFrame.Frame/Main.ScrollingFrame/UIListLayout.UIListLayout.properties
@@ -1,1 +1,1 @@
-{{Padding="UDim.new(0, 5)",SortOrder="Enum.SortOrder.LayoutOrder",Tags={"I2F_949D96BF-C8F2-405E-A31A-1DB4E8267FDC"}}}
+{{HorizontalAlignment="Enum.HorizontalAlignment.Center",Padding="UDim.new(0, 5)",SortOrder="Enum.SortOrder.LayoutOrder",Tags={"I2F_4C3AE8C8-85DD-4C74-82A3-8AD1BBC5D8F1"}}}
