Inst2File update

--- a/MainModule.ModuleScript/MenuModules.Folder/ThemeUtil.ModuleScript/Client.ModuleScript/Base.TextButton/Title.TextLabel/UITextSizeConstraint.properties
+++ b/MainModule.ModuleScript/MenuModules.Folder/ThemeUtil.ModuleScript/Client.ModuleScript/Base.TextButton/Title.TextLabel/UITextSizeConstraint.properties
@@ -1,1 +1,1 @@
-{{MaxTextSize="16",Tags={"I2F_795C368E-E61D-4C24-9B3B-A8A3DCA6A9CD"}}}
+{{MaxTextSize="16",Tags={"I2F_795C368E-E61D-4C24-9B3B-A8A3DCA6A9CD",}}}
