--- a/MainModule.ModuleScript/StarterGui.Folder/ThemeGui.ScreenGui.properties
+++ b/MainModule.ModuleScript/StarterGui.Folder/ThemeGui.ScreenGui.properties
@@ -1,1 +1,1 @@
-{{DisplayOrder="1",ResetOnSpawn="false",Tags={"I2F_D7A10886-501F-4F9E-ACE4-2184BB6D4156"}}}
+{{DisplayOrder="1",ResetOnSpawn="false",Tags={"I2F_D7A10886-501F-4F9E-ACE4-2184BB6D4156",}}}
