--- a/MainModule.ModuleScript/StarterGui.Folder/ThemeGui.ScreenGui/Frame/Main.ScrollingFrame/UIListLayout.properties
+++ b/MainModule.ModuleScript/StarterGui.Folder/ThemeGui.ScreenGui/Frame/Main.ScrollingFrame/UIListLayout.properties
@@ -1,1 +1,1 @@
-{{HorizontalAlignment="Enum.HorizontalAlignment.Center",Padding="UDim.new(0, 5)",SortOrder="Enum.SortOrder.LayoutOrder",Tags={"I2F_4C3AE8C8-85DD-4C74-82A3-8AD1BBC5D8F1"}}}
+{{HorizontalAlignment="Enum.HorizontalAlignment.Center",Padding="UDim.new(0, 5)",SortOrder="Enum.SortOrder.LayoutOrder",Tags={"I2F_4C3AE8C8-85DD-4C74-82A3-8AD1BBC5D8F1",}}}
