--- a/MainModule.ModuleScript/StarterGui.Folder/ThemeGui.ScreenGui/Frame/Main.ScrollingFrame/UIPadding.properties
+++ b/MainModule.ModuleScript/StarterGui.Folder/ThemeGui.ScreenGui/Frame/Main.ScrollingFrame/UIPadding.properties
@@ -1,1 +1,1 @@
-{{PaddingLeft="UDim.new(0, 5)",PaddingRight="UDim.new(0, 5)",Tags={"I2F_15910FD8-0DF5-460A-88D1-D844EFADBA42"}}}
+{{PaddingLeft="UDim.new(0, 5)",PaddingRight="UDim.new(0, 5)",Tags={"I2F_15910FD8-0DF5-460A-88D1-D844EFADBA42",}}}
