--- a/MainModule.ModuleScript/MenuModules.Folder/ThemeUtil.ModuleScript/Client.ModuleScript/Base.TextButton/Title.TextLabel/UITextSizeConstraint.properties
+++ b/MainModule.ModuleScript/MenuModules.Folder/ThemeUtil.ModuleScript/Client.ModuleScript/Base.TextButton/Title.TextLabel/UITextSizeConstraint.properties
@@ -1,1 +1,1 @@
-{{MaxTextSize="16",Tags={"I2F_2FFFD04C-5999-44B5-8BFB-230EE84C16F9",}}}
+{{MaxTextSize = 16, Tags = {"I2F_2FFFD04C-5999-44B5-8BFB-230EE84C16F9"}}}
