--- a/MainModule.ModuleScript/MenuModules.Folder/ThemeUtil.ModuleScript/Client.ModuleScript/Gui.Frame/MainTab.Frame/ScrollingFrame/UIListLayout.properties
+++ b/MainModule.ModuleScript/MenuModules.Folder/ThemeUtil.ModuleScript/Client.ModuleScript/Gui.Frame/MainTab.Frame/ScrollingFrame/UIListLayout.properties
@@ -1,1 +1,1 @@
-{{HorizontalAlignment="Enum.HorizontalAlignment.Center",Padding="UDim.new(0, 5)",SortOrder="Enum.SortOrder.LayoutOrder",Tags={"I2F_49BE1602-00BF-451B-BEDE-32B0E051BBFD",}}}
+{{HorizontalAlignment = Enum.HorizontalAlignment.Center, Padding = UDim.new(0, 5), SortOrder = Enum.SortOrder.LayoutOrder, Tags = {"I2F_49BE1602-00BF-451B-BEDE-32B0E051BBFD"}}}
