--- a/MainModule.ModuleScript/MenuModules.Folder/ThemeUtil.ModuleScript/Client.ModuleScript/Gui.Frame/MainTab.Frame.properties
+++ b/MainModule.ModuleScript/MenuModules.Folder/ThemeUtil.ModuleScript/Client.ModuleScript/Gui.Frame/MainTab.Frame.properties
@@ -1,1 +1,1 @@
-{{BackgroundColor3="Color3.fromRGB(255,255,255)",BackgroundTransparency="1",BorderSizePixel="0",Size="UDim2.new(1,0,1,0)",Tags={"I2F_731627E2-7872-4C33-B732-8EFB31AB4AC2",}}}
+{{BackgroundColor3 = Color3.fromRGB(255, 255, 255), BackgroundTransparency = 1, BorderSizePixel = 0, Size = UDim2.new(1, 0, 1, 0), Tags = {"I2F_731627E2-7872-4C33-B732-8EFB31AB4AC2"}}}
