--- a/MainModule.ModuleScript/MenuModules.Folder/ThemeUtil.ModuleScript/Client.ModuleScript/Gui.Frame/MainTab.Frame/ScrollingFrame/UIPadding.properties
+++ b/MainModule.ModuleScript/MenuModules.Folder/ThemeUtil.ModuleScript/Client.ModuleScript/Gui.Frame/MainTab.Frame/ScrollingFrame/UIPadding.properties
@@ -1,1 +1,1 @@
-{{PaddingLeft="UDim.new(0, 5)",PaddingRight="UDim.new(0, 5)",Tags={"I2F_BB95E179-E417-4346-9B0D-8F74A5D75294",}}}
+{{PaddingLeft = UDim.new(0, 5), PaddingRight = UDim.new(0, 5), Tags = {"I2F_BB95E179-E417-4346-9B0D-8F74A5D75294"}}}
